--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Janarthanan M | Portfolio</title>
-
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style-v2.css">
- 
-</head>
 
+
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
 <header>
   <img src="images/jana.jpg" alt="Avatar">
